--- a/index.html
+++ b/index.html
@@ -3,75 +3,125 @@
 <head>
   <meta charset="UTF-8" />
   <title>El Universo de Simón</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Bootstrap CSS + Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
+
+  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Quicksand', sans-serif;
+    }
+    .sidebar {
+      height: 100vh;
+      overflow-y: auto;
+    }
+    .slide {
+      display: none;
+    }
+    .slide.active {
+      display: block;
+    }
+    .ilustracion {
+      max-height: 300px;
+      object-fit: cover;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>El Universo de Simón</h1>
-      <button class="btn-contraste" onclick="toggleContraste()">🌓 Contraste</button>
-      <div class="controles">
-        <label for="selectVoz">Seleccionar voz:</label>
-        <select id="selectVoz"></select>
-      </div>
-      
-    </header>
 
-    <div class="slider">
-      <div class="slide active">
-        <img src="img/escena1.png" alt="Simón observando las estrellas" class="ilustracion" />
-        <div class="contenido">
-          <p id="texto1">Una noche clara y silenciosa, Simón salió al jardín y levantó la mirada al cielo inmenso. Las estrellas brillaban con tanta intensidad que parecía que parpadeaban solo para él. En ese instante mágico, sintió que aquellas luces lejanas le hablaban en un idioma misterioso, un lenguaje antiguo que parecía venir desde lo más profundo del universo. Aunque no entendía las palabras, su corazón sí las sentía.</p>
-          <div class="controles">
-            <button class="btn-audio" onclick="leerTexto('texto1')">🔊 Leer</button>
-            <audio src="audio/narracion.mp3" controls></audio>
-          </div>
-          <div class="interprete">
-            <video src="video/lsc1.mp4" controls></video>
-            <p>Lengua de Señas Colombiana</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="slide">
-        <img src="img/escena_2.png" alt="Simón viajando entre planetas" class="ilustracion" />
-        <div class="contenido">
-          <p id="texto2">Esa misma noche, Simón soñó que construía su propio cohete con luces de luciérnaga y motores de imaginación. Al despegar, voló más allá de la Luna y cruzó galaxias de colores brillantes. En cada planeta que visitaba, descubría que tenían voces distintas: unos hablaban con sonidos musicales, otros con luces y destellos. Simón escuchaba con asombro, aprendiendo que cada mundo tenía una historia única por contar.</p>
-          <div class="controles">
-            <button class="btn-audio" onclick="leerTexto('texto2')">🔊 Leer</button>
-            <audio src="audio/narracion2.mp3" controls></audio>
-          </div>
-          <div class="interprete">
-            <video src="video/lsc2.mp4" controls></video>
-            <p>Lengua de Señas Colombiana</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="slide">
-        <img src="img/escena_3.png" alt="Simón junto a un planeta amigo" class="ilustracion" />
-        <div class="contenido">
-          <p id="texto3">Después de su largo viaje entre estrellas y planetas, Simón regresó a casa con el alma llena de maravillas. Se dio cuenta de que no hacía falta ir muy lejos para entender el universo. Solo bastaba cerrar los ojos, escuchar el silencio y mirar con atención. Porque el universo, tan vasto e infinito, también escucha... pero solo a quienes se atreven a mirar con el corazón abierto y los sueños despiertos.</p>
-          <div class="controles">
-            <button class="btn-audio" onclick="leerTexto('texto3')">🔊 Leer</button>
-            <audio src="audio/narracion3.mp3" controls></audio>
-            
-          </div>
-          <div class="interprete">
-            <video src="video/lsc3.mp4" controls></video>
-            <p>Multimedia</p>
-          </div>
-        </div>
-      </div>
+  <!-- Navbar solo visible en móvil -->
+  <nav class="navbar navbar-dark bg-dark sticky-top d-md-none">
+    <div class="container-fluid">
+      <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-controls="mobileMenu">
+        <i class="bi bi-list"></i>
+      </button>
+      <span class="navbar-brand ms-2">El Universo de Simón</span>
     </div>
+  </nav>
 
-    <div class="navegacion">
-      <button onclick="cambiarSlide(-1)">⬅ Anterior</button>
-      <button onclick="cambiarSlide(1)">Siguiente ➡</button>
+  <!-- Menú Offcanvas para móviles -->
+  <div class="offcanvas offcanvas-start d-md-none" tabindex="-1" id="mobileMenu" aria-labelledby="mobileMenuLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="mobileMenuLabel">Menú</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
+    </div>
+    <div class="offcanvas-body">
+      <ul class="nav flex-column">
+        <li class="nav-item"><a class="nav-link active" href="#"><i class="bi bi-house-fill"></i> Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-journal-text"></i> Capítulos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-volume-up"></i> Audiocuento</a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-sign-language"></i> Lengua de Señas</a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-universal-access"></i> Accesibilidad</a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-info-circle"></i> Sobre el proyecto</a></li>
+      </ul>
     </div>
   </div>
 
+  <div class="container-fluid">
+    <div class="row">
+      <!-- Sidebar para pantallas grandes -->
+      <nav class="col-md-3 col-lg-2 d-none d-md-block bg-light sidebar p-3">
+        <div class="sidebar">
+          <ul class="nav flex-column">
+            <li class="nav-item"><a class="nav-link active" href="#"><i class="bi bi-house-fill"></i> Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-journal-text"></i> Capítulos</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-volume-up"></i> Audiocuento</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-sign-language"></i> Lengua de Señas</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-universal-access"></i> Accesibilidad</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-info-circle"></i> Sobre el proyecto</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <!-- Contenido principal -->
+      <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <h1>El Universo de Simón</h1>
+          <div>
+            <button class="btn btn-outline-dark btn-sm" onclick="toggleContraste()">🌓 Contraste</button>
+            <select id="selectVoz" class="form-select form-select-sm d-inline-block w-auto ms-2"></select>
+          </div>
+        </div>
+
+        <!-- Aquí va el slider de las escenas del cuento -->
+        <div class="slider">
+          <!-- Reutiliza las slides como ya las tienes -->
+          <!-- Ejemplo Slide -->
+          <div class="slide active card p-3 mb-4">
+            <img src="img/escena1.png" class="ilustracion mb-3" alt="Simón observando las estrellas">
+            <p id="texto1">Una noche clara y silenciosa, Simón salió al jardín...</p>
+            <div class="d-flex gap-3 mb-2">
+              <button class="btn btn-primary" onclick="leerTexto('texto1')">🔊 Leer</button>
+              <audio src="audio/narracion.mp3" controls></audio>
+            </div>
+            <div class="interprete">
+              <video src="video/lsc1.mp4" controls class="w-100 mb-1"></video>
+              <p>Lengua de Señas Colombiana</p>
+            </div>
+          </div>
+          <!-- Más slides... -->
+        </div>
+
+        <!-- Navegación del cuento -->
+        <div class="d-flex justify-content-between">
+          <button class="btn btn-secondary" onclick="cambiarSlide(-1)">⬅ Anterior</button>
+          <button class="btn btn-secondary" onclick="cambiarSlide(1)">Siguiente ➡</button>
+        </div>
+      </main>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
